--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,9 +15,9 @@ jobs:
       uses: actions/setup-node@master
       with:
         node-version: 12
-    - run: yarn
-    - run: yarn test
-    - run: yarn build
+    - run: npm
+    # - run: npm run test
+    - run: npm run build
     - name: Publish if version has been updated
       uses: pascalgn/npm-publish-action@4f4bf159e299f65d21cd1cbd96fc5d53228036df
       with:
