--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.5.1",
   "description": "Simple photo gallery based on React and Airbnb image gallery. Forked from https://github.com/peterpalau/react-bnb-gallery",
   "author": "Zaw Linn Naing <zawlinnnaing0018@gmail.com>",
-  "homepage": "https://peterpalau.github.io/react-bnb-gallery/",
+  "homepage": "https://github.com/zawlinnnaing/react-bnb-gallery",
   "keywords": [
     "react",
     "gallery",
